0.522 2024-06-06
  [Requirement Changes]
    * Require SPVM::Resource::SocketUtil 1.002.
    
0.521 2024-06-05
  [Requirement Changes]
    * Require SPVM 0.990006.
  [Internal Changes]
    * If SPVM_SOCKET_UTIL_DEFINE_SOCKADDR_UN macro is defined, struct sockaddr_un is not declared.
0.520 2024-06-03
  [Fix Warnings]
    * Fix unneeded warning in Sys::Socket#recvfrom method.
0.519 2024-06-03
  [Incompatible Changes]
    * Change an argument of Sys#recvfrom method.
      [Before]
      method recvfrom : int ($socket_fd : int, $buffer : mutable string, $length : int, $flags : int, $sockaddr : Sys::Socket::Sockaddr, $buffer_offset : int = 0);
      
      [After]
      method recvfrom : int ($socket_fd : int, $buffer : mutable string, $length : int, $flags : int, $sockaddr_ref : Sys::Socket::Sockaddr[], $buffer_offset : int = 0);
    
0.518 2024-06-03
  [Incompatible Changes]
    * The implementation and definition of Sys::send method is replaced with the ones of Sys::send_v2 method.
    * Sys::send_v2 method is removed.
    * Changes the return type of Sys#set_real_user_id method from int to void.
    * Changes the return type of Sys#set_effective_user_id method from int to void.
    * Changes the return type of Sys#set_real_group_id method from int to void.
    * Changes the return type of Sys#set_effective_group_id method from int to void.
    
0.517 2024-05-31
  [Bug Fix]
    * Fix the bug that Sys#getpeername method may allocate a wrong size of memory.
    * Fix the bug that Sys#getsockname method may allocate a wrong size of memory.
    * Fix the bug that Sys::Socket::Sockaddr#new method may allocate a wrong size of memory.
    * Fix the bug that Sys#accept method may allocate a wrong size of memory.
  [New Features]
    * Add Sys::Socket#sendto method.
    * Add Sys::Socket#recvfrom method.
    * Add Sys#recvfrom method.
  
  [New Features that Will Removed in The Nearly Future]
    * Add Sys::send_v2 method. This will replace Sys::send and will removed.
  