@@ -1,7 +1,8 @@
 0.522 2024-06-06
   [Requirement Changes]
     * Require SPVM::Resource::SocketUtil 1.002.
-    
+  [Internal Changes]
+    * struct sockaddr_un is not defined because spvm_socket_util.h has it now.
 0.521 2024-06-05
   [Requirement Changes]
     * Require SPVM 0.990006.
